added tester files

--- a/tester-women .ipynb
+++ b/tester-women .ipynb
@@ -2,20 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "import pandas as pd"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 4,
+   "source": [
+    "# The path to our CSV file\r\n",
+    "file = \"Resources/olympic_data.csv\"\r\n",
+    "\r\n",
+    "# Read our data into pandas\r\n",
+    "df = pd.read_csv(file)\r\n",
+    "df.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "   ID                      Name Sex   Age  Height  Weight            Team  \\\n",
+       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
+       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
+       "2   3       Gunnar Nielsen Aaby   M  24.0     NaN     NaN         Denmark   \n",
+       "3   4      Edgar Lindenau Aabye   M  34.0     NaN     NaN  Denmark/Sweden   \n",
+       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
+       "\n",
+       "   NOC        Games  Year  Season       City          Sport  \\\n",
+       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
+       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
+       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
+       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
+       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
+       "\n",
+       "                              Event Medal  \n",
+       "0       Basketball Men's Basketball   NaN  \n",
+       "1      Judo Men's Extra-Lightweight   NaN  \n",
+       "2           Football Men's Football   NaN  \n",
+       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
+       "4  Speed Skating Women's 500 metres   NaN  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -146,50 +176,23 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "   ID                      Name Sex   Age  Height  Weight            Team  \\\n",
-       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
-       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
-       "2   3       Gunnar Nielsen Aaby   M  24.0     NaN     NaN         Denmark   \n",
-       "3   4      Edgar Lindenau Aabye   M  34.0     NaN     NaN  Denmark/Sweden   \n",
-       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
-       "\n",
-       "   NOC        Games  Year  Season       City          Sport  \\\n",
-       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
-       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
-       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
-       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
-       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
-       "\n",
-       "                              Event Medal  \n",
-       "0       Basketball Men's Basketball   NaN  \n",
-       "1      Judo Men's Extra-Lightweight   NaN  \n",
-       "2           Football Men's Football   NaN  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
-       "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "# The path to our CSV file\n",
-    "file = \"Resources/olympic_data.csv\"\n",
-    "\n",
-    "# Read our data into pandas\n",
-    "df = pd.read_csv(file)\n",
-    "df.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "df.columns"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "Index(['ID', 'Name', 'Sex', 'Age', 'Height', 'Weight', 'Team', 'NOC', 'Games',\n",
@@ -197,22 +200,39 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "df.columns"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "source": [
+    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team',\r\n",
+    "                                'Year', 'Sport', 'Event', 'Medal']]\r\n",
+    "starter_olympics_df.head()\r\n"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "                       Name Sex   Age            Team  Year          Sport  \\\n",
+       "0                 A Dijiang   M  24.0           China  1992     Basketball   \n",
+       "1                  A Lamusi   M  23.0           China  2012           Judo   \n",
+       "2       Gunnar Nielsen Aaby   M  24.0         Denmark  1920       Football   \n",
+       "3      Edgar Lindenau Aabye   M  34.0  Denmark/Sweden  1900     Tug-Of-War   \n",
+       "4  Christine Jacoba Aaftink   F  21.0     Netherlands  1988  Speed Skating   \n",
+       "\n",
+       "                              Event Medal  \n",
+       "0       Basketball Men's Basketball   NaN  \n",
+       "1      Judo Men's Extra-Lightweight   NaN  \n",
+       "2           Football Men's Football   NaN  \n",
+       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
+       "4  Speed Skating Women's 500 metres   NaN  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -301,47 +321,20 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "                       Name Sex   Age            Team  Year          Sport  \\\n",
-       "0                 A Dijiang   M  24.0           China  1992     Basketball   \n",
-       "1                  A Lamusi   M  23.0           China  2012           Judo   \n",
-       "2       Gunnar Nielsen Aaby   M  24.0         Denmark  1920       Football   \n",
-       "3      Edgar Lindenau Aabye   M  34.0  Denmark/Sweden  1900     Tug-Of-War   \n",
-       "4  Christine Jacoba Aaftink   F  21.0     Netherlands  1988  Speed Skating   \n",
-       "\n",
-       "                              Event Medal  \n",
-       "0       Basketball Men's Basketball   NaN  \n",
-       "1      Judo Men's Extra-Lightweight   NaN  \n",
-       "2           Football Men's Football   NaN  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
-       "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team',\n",
-    "                                'Year', 'Sport', 'Event', 'Medal']]\n",
-    "starter_olympics_df.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -349,9 +342,8 @@
    "hash": "1094b6c851ee2dfcde7800483b86af07dc336cbad65f7e6986e29e39f634f912"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
-   "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3",
+   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)"
   },
   "language_info": {
    "codemirror_mode": {
