--- a/tester-winner_metals.ipynb
+++ b/tester-winner_metals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -197,18 +197,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Found Column name\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +319,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,15 +327,129 @@
    "source": [
     "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team',\n",
     "                                'Year', 'Sport', 'Event', 'Medal']]\n",
-    "starter_olympics_df.head()"
+    "starter_olympics_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "medals_df = df.loc[:, ['Name', 'Sex', 'Year', 'Event', 'Medal']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medals_winners_df= medals_df.dropna(how='any')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Event</th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Edgar Lindenau Aabye</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
+       "      <td>Gold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Arvo Ossian Aaltonen</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>Swimming Men's 200 metres Breaststroke</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Arvo Ossian Aaltonen</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>Swimming Men's 400 metres Breaststroke</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Juhamatti Tapio Aaltonen</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Ice Hockey Men's Ice Hockey</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Paavo Johannes Aaltonen</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1948</td>\n",
+       "      <td>Gymnastics Men's Individual All-Around</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Name Sex  Year  \\\n",
+       "3       Edgar Lindenau Aabye   M  1900   \n",
+       "37      Arvo Ossian Aaltonen   M  1920   \n",
+       "38      Arvo Ossian Aaltonen   M  1920   \n",
+       "40  Juhamatti Tapio Aaltonen   M  2014   \n",
+       "41   Paavo Johannes Aaltonen   M  1948   \n",
+       "\n",
+       "                                     Event   Medal  \n",
+       "3              Tug-Of-War Men's Tug-Of-War    Gold  \n",
+       "37  Swimming Men's 200 metres Breaststroke  Bronze  \n",
+       "38  Swimming Men's 400 metres Breaststroke  Bronze  \n",
+       "40             Ice Hockey Men's Ice Hockey  Bronze  \n",
+       "41  Gymnastics Men's Individual All-Around  Bronze  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medals_winners_df.head()"
+   ]
   },
   {
    "cell_type": "code",
