added sports to comments on women and combo

--- a/tester-combo_sports.ipynb
+++ b/tester-combo_sports.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## list of sports for both men and women:\n",
+    "#Athletics, Gymnastics, Alpine Skiing, Cross Country Skiing, Rowing, Sailing, Shooting, Swimming, Wrestling\n",
+    "\n",
     "import pandas as pd"
    ]
   },
