--- a/tester-women .ipynb
+++ b/tester-women .ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Women sports topics (Most played sports, maybe add age??):\n",
+    "#Athletics, Gymnastics, Swimming\n",
+    "\n",
+    "\n",
     "import pandas as pd"
    ]
   },
