small adjustment on tester women

--- a/tester-women .ipynb
+++ b/tester-women .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,14 +174,14 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# The path to our CSV file\n",
-    "file = \"Resources/olympic_data.csv\"\n",
+    "file = \"Resources/original_olympic_data.csv\"\n",
     "\n",
     "# Read our data into pandas\n",
     "df = pd.read_csv(file)\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,323 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>Medal</th>\n",
-       "      <th>NOC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A Dijiang</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>Basketball</td>\n",
-       "      <td>Basketball Men's Basketball</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CHN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A Lamusi</td>\n",
-       "      <td>M</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>Judo Men's Extra-Lightweight</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CHN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Gunnar Nielsen Aaby</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Football</td>\n",
-       "      <td>Football Men's Football</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DEN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Edgar Lindenau Aabye</td>\n",
-       "      <td>M</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>Denmark/Sweden</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>Tug-Of-War</td>\n",
-       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>DEN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Christine Jacoba Aaftink</td>\n",
-       "      <td>F</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>Speed Skating</td>\n",
-       "      <td>Speed Skating Women's 500 metres</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NED</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       Name Sex   Age            Team  Year          Sport  \\\n",
-       "0                 A Dijiang   M  24.0           China  1992     Basketball   \n",
-       "1                  A Lamusi   M  23.0           China  2012           Judo   \n",
-       "2       Gunnar Nielsen Aaby   M  24.0         Denmark  1920       Football   \n",
-       "3      Edgar Lindenau Aabye   M  34.0  Denmark/Sweden  1900     Tug-Of-War   \n",
-       "4  Christine Jacoba Aaftink   F  21.0     Netherlands  1988  Speed Skating   \n",
-       "\n",
-       "                              Event Medal  NOC  \n",
-       "0       Basketball Men's Basketball   NaN  CHN  \n",
-       "1      Judo Men's Extra-Lightweight   NaN  CHN  \n",
-       "2           Football Men's Football   NaN  DEN  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold  DEN  \n",
-       "4  Speed Skating Women's 500 metres   NaN  NED  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team',\n",
-    "                                'Year', 'Sport', 'Event', 'Medal', 'NOC']]\n",
-    "starter_olympics_df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>Medal</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NOC</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AFG</th>\n",
-       "      <td>126</td>\n",
-       "      <td>126</td>\n",
-       "      <td>78</td>\n",
-       "      <td>126</td>\n",
-       "      <td>126</td>\n",
-       "      <td>126</td>\n",
-       "      <td>126</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AHO</th>\n",
-       "      <td>79</td>\n",
-       "      <td>79</td>\n",
-       "      <td>78</td>\n",
-       "      <td>79</td>\n",
-       "      <td>79</td>\n",
-       "      <td>79</td>\n",
-       "      <td>79</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ALB</th>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>70</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ALG</th>\n",
-       "      <td>551</td>\n",
-       "      <td>551</td>\n",
-       "      <td>545</td>\n",
-       "      <td>551</td>\n",
-       "      <td>551</td>\n",
-       "      <td>551</td>\n",
-       "      <td>551</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AND</th>\n",
-       "      <td>169</td>\n",
-       "      <td>169</td>\n",
-       "      <td>169</td>\n",
-       "      <td>169</td>\n",
-       "      <td>169</td>\n",
-       "      <td>169</td>\n",
-       "      <td>169</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>YEM</th>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>YMD</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>YUG</th>\n",
-       "      <td>2583</td>\n",
-       "      <td>2583</td>\n",
-       "      <td>2454</td>\n",
-       "      <td>2583</td>\n",
-       "      <td>2583</td>\n",
-       "      <td>2583</td>\n",
-       "      <td>2583</td>\n",
-       "      <td>390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZAM</th>\n",
-       "      <td>183</td>\n",
-       "      <td>183</td>\n",
-       "      <td>154</td>\n",
-       "      <td>183</td>\n",
-       "      <td>183</td>\n",
-       "      <td>183</td>\n",
-       "      <td>183</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZIM</th>\n",
-       "      <td>311</td>\n",
-       "      <td>311</td>\n",
-       "      <td>309</td>\n",
-       "      <td>311</td>\n",
-       "      <td>311</td>\n",
-       "      <td>311</td>\n",
-       "      <td>311</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>230 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Name   Sex   Age  Team  Year  Sport  Event  Medal\n",
-       "NOC                                                   \n",
-       "AFG   126   126    78   126   126    126    126      2\n",
-       "AHO    79    79    78    79    79     79     79      1\n",
-       "ALB    70    70    70    70    70     70     70      0\n",
-       "ALG   551   551   545   551   551    551    551     17\n",
-       "AND   169   169   169   169   169    169    169      0\n",
-       "..    ...   ...   ...   ...   ...    ...    ...    ...\n",
-       "YEM    32    32    32    32    32     32     32      0\n",
-       "YMD     5     5     5     5     5      5      5      0\n",
-       "YUG  2583  2583  2454  2583  2583   2583   2583    390\n",
-       "ZAM   183   183   154   183   183    183    183      2\n",
-       "ZIM   311   311   309   311   311    311    311     22\n",
-       "\n",
-       "[230 rows x 8 columns]"
+       "Name    33808\n",
+       "Sex     33808\n",
+       "Age     33525\n",
+       "Team    33808\n",
+       "NOC     33808\n",
+       "dtype: int64"
       ]
      },
      "execution_count": 30,
@@ -537,12 +232,83 @@
     }
    ],
    "source": [
-    "noc_grp = starter_olympics_df.groupby(by='NOC').count()\n",
-    "nc_df = pd.DataFrame(noc_grp)\n",
-    "nc_df\n",
-    "#noc_gender = nc_df.loc[nc_df['Sex']=='F'].count()\n",
-    "#print(noc_gender)"
+    "##With this dataset you can see that there have only been 33,808 women who have participated in the Olympic Games\n",
+    "\n",
+    "#Selecting the columns\n",
+    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team', 'NOC',\n",
+    "                                'Year', 'Sport', 'Event', 'Medal']]\n",
+    "starter_olympics_df.head()\n",
+    "\n",
+    "#Select only USA participants\n",
+    "usa_filter = starter_olympics_df[(starter_olympics_df[\"Sex\"] == \"F\")]\n",
+    "usa_filter.head()\n",
+    "\n",
+    "#drop duplicates based off of the name\n",
+    "usa_clean = usa_filter.drop_duplicates(subset=['Name']).count()\n",
+    "usa_clean.head()\n",
+    "\n",
+    "#Checking for any Nan values on columns to be used\n",
+    "#usa_clean['NOC'].isnull().values.any()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name    100979\n",
+       "Sex     100979\n",
+       "Age      94941\n",
+       "Team    100979\n",
+       "NOC     100979\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#Selecting the columns\n",
+    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team', 'NOC',\n",
+    "                                'Year', 'Sport', 'Event', 'Medal']]\n",
+    "starter_olympics_df.head()\n",
+    "\n",
+    "#Select only USA participants\n",
+    "usa_filter = starter_olympics_df[(starter_olympics_df[\"Sex\"] == \"M\")]\n",
+    "usa_filter.head()\n",
+    "\n",
+    "#drop duplicates based off of the name\n",
+    "usa_clean = usa_filter.drop_duplicates(subset=['Name']).count()\n",
+    "usa_clean.head()\n",
+    "\n",
+    "#Checking for any Nan values on columns to be used\n",
+    "#usa_clean['NOC'].isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'starter_olympic_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-184860921b70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstarter_olympic_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Sport\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'starter_olympic_df' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
