Alex First Work

--- a/tester-winner_metals.ipynb
+++ b/tester-winner_metals.ipynb
@@ -464,9 +464,9 @@
    "hash": "1094b6c851ee2dfcde7800483b86af07dc336cbad65f7e6986e29e39f634f912"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
