--- a/winner_metals.ipynb
+++ b/winner_metals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\bck2l\\anaconda3\\envs\\pythondata\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3072: DtypeWarning: Columns (0,1,35,37) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -35,142 +43,188 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Height</th>\n",
-       "      <th>Weight</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>NOC</th>\n",
-       "      <th>Games</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>Medal</th>\n",
+       "      <th>F</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 28</th>\n",
+       "      <th>Unnamed: 29</th>\n",
+       "      <th>Unnamed: 30</th>\n",
+       "      <th>Unnamed: 31</th>\n",
+       "      <th>Unnamed: 32</th>\n",
+       "      <th>Unnamed: 33</th>\n",
+       "      <th>Unnamed: 34</th>\n",
+       "      <th>Unnamed: 35</th>\n",
+       "      <th>Unnamed: 36</th>\n",
+       "      <th>Unnamed: 37</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>A Dijiang</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>1992 Summer</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Barcelona</td>\n",
-       "      <td>Basketball</td>\n",
-       "      <td>Basketball Men's Basketball</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>A Lamusi</td>\n",
-       "      <td>M</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>China</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>2012 Summer</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>Judo Men's Extra-Lightweight</td>\n",
+       "      <td>Count of Sex</td>\n",
+       "      <td>Column Labels</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Gunnar Nielsen Aaby</td>\n",
-       "      <td>M</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>Row Labels</td>\n",
+       "      <td>1900</td>\n",
+       "      <td>1904.0</td>\n",
+       "      <td>1906.0</td>\n",
+       "      <td>1908.0</td>\n",
+       "      <td>1912.0</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>1924.0</td>\n",
+       "      <td>1928.0</td>\n",
+       "      <td>1932.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>Grand Total</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1920 Summer</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Antwerpen</td>\n",
-       "      <td>Football</td>\n",
-       "      <td>Football Men's Football</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Edgar Lindenau Aabye</td>\n",
-       "      <td>M</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>MAR</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Denmark/Sweden</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1900 Summer</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>Tug-Of-War</td>\n",
-       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
-       "      <td>Gold</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Christine Jacoba Aaftink</td>\n",
-       "      <td>F</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>NED</td>\n",
-       "      <td>1988 Winter</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>Speed Skating</td>\n",
-       "      <td>Speed Skating Women's 500 metres</td>\n",
+       "      <td>MON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ID                      Name Sex   Age  Height  Weight            Team  \\\n",
-       "0   1                 A Dijiang   M  24.0   180.0    80.0           China   \n",
-       "1   2                  A Lamusi   M  23.0   170.0    60.0           China   \n",
-       "2   3       Gunnar Nielsen Aaby   M  24.0     NaN     NaN         Denmark   \n",
-       "3   4      Edgar Lindenau Aabye   M  34.0     NaN     NaN  Denmark/Sweden   \n",
-       "4   5  Christine Jacoba Aaftink   F  21.0   185.0    82.0     Netherlands   \n",
+       "            Sex              F  Unnamed: 2  Unnamed: 3  Unnamed: 4  \\\n",
+       "0           NaN            NaN         NaN         NaN         NaN   \n",
+       "1  Count of Sex  Column Labels         NaN         NaN         NaN   \n",
+       "2    Row Labels           1900      1904.0      1906.0      1908.0   \n",
+       "3           MAR            NaN         NaN         NaN         NaN   \n",
+       "4           MON            NaN         NaN         NaN         NaN   \n",
        "\n",
-       "   NOC        Games  Year  Season       City          Sport  \\\n",
-       "0  CHN  1992 Summer  1992  Summer  Barcelona     Basketball   \n",
-       "1  CHN  2012 Summer  2012  Summer     London           Judo   \n",
-       "2  DEN  1920 Summer  1920  Summer  Antwerpen       Football   \n",
-       "3  DEN  1900 Summer  1900  Summer      Paris     Tug-Of-War   \n",
-       "4  NED  1988 Winter  1988  Winter    Calgary  Speed Skating   \n",
+       "   Unnamed: 5  Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  ...  \\\n",
+       "0         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "1         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "2      1912.0      1920.0      1924.0      1928.0      1932.0  ...   \n",
+       "3         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "4         NaN         NaN         NaN         NaN         NaN  ...   \n",
        "\n",
-       "                              Event Medal  \n",
-       "0       Basketball Men's Basketball   NaN  \n",
-       "1      Judo Men's Extra-Lightweight   NaN  \n",
-       "2           Football Men's Football   NaN  \n",
-       "3       Tug-Of-War Men's Tug-Of-War  Gold  \n",
-       "4  Speed Skating Women's 500 metres   NaN  "
+       "   Unnamed: 28  Unnamed: 29  Unnamed: 30  Unnamed: 31  Unnamed: 32  \\\n",
+       "0          NaN          NaN          NaN          NaN          NaN   \n",
+       "1          NaN          NaN          NaN          NaN          NaN   \n",
+       "2       2004.0       2006.0       2008.0       2010.0       2012.0   \n",
+       "3          9.0          NaN         12.0          NaN         19.0   \n",
+       "4          1.0          5.0          1.0          4.0          1.0   \n",
+       "\n",
+       "   Unnamed: 33  Unnamed: 34  Unnamed: 35  Unnamed: 36  Unnamed: 37  \n",
+       "0          NaN          NaN          NaN          NaN          NaN  \n",
+       "1          NaN          NaN          NaN          NaN          NaN  \n",
+       "2       2014.0       2016.0  Grand Total          NaN          NaN  \n",
+       "3          2.0         21.0           92          NaN          NaN  \n",
+       "4          2.0          NaN           18          NaN          NaN  \n",
+       "\n",
+       "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,18 +240,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ID', 'Name', 'Sex', 'Age', 'Height', 'Weight', 'Team', 'NOC', 'Games',\n",
-       "       'Year', 'Season', 'City', 'Sport', 'Event', 'Medal'],\n",
+       "Index(['Sex', 'F', 'Unnamed: 2', 'Unnamed: 3', 'Unnamed: 4', 'Unnamed: 5',\n",
+       "       'Unnamed: 6', 'Unnamed: 7', 'Unnamed: 8', 'Unnamed: 9', 'Unnamed: 10',\n",
+       "       'Unnamed: 11', 'Unnamed: 12', 'Unnamed: 13', 'Unnamed: 14',\n",
+       "       'Unnamed: 15', 'Unnamed: 16', 'Unnamed: 17', 'Unnamed: 18',\n",
+       "       'Unnamed: 19', 'Unnamed: 20', 'Unnamed: 21', 'Unnamed: 22',\n",
+       "       'Unnamed: 23', 'Unnamed: 24', 'Unnamed: 25', 'Unnamed: 26',\n",
+       "       'Unnamed: 27', 'Unnamed: 28', 'Unnamed: 29', 'Unnamed: 30',\n",
+       "       'Unnamed: 31', 'Unnamed: 32', 'Unnamed: 33', 'Unnamed: 34',\n",
+       "       'Unnamed: 35', 'Unnamed: 36', 'Unnamed: 37'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,10 +514,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'medals_winner' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5ed0d139d5a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmedals_winner\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'medals_winner' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "medals_winner"
+   ]
   }
  ],
  "metadata": {
@@ -464,9 +539,9 @@
    "hash": "1094b6c851ee2dfcde7800483b86af07dc336cbad65f7e6986e29e39f634f912"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
