tester women update

--- a/tester-women .ipynb
+++ b/tester-women .ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,48 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Name    33808\n",
-       "Sex     33808\n",
-       "Age     33525\n",
-       "Team    33808\n",
-       "NOC     33808\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "##With this dataset you can see that there have only been 33,808 women who have participated in the Olympic Games\n",
-    "\n",
-    "#Selecting the columns\n",
-    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team', 'NOC',\n",
-    "                                'Year', 'Sport', 'Event', 'Medal']]\n",
-    "starter_olympics_df.head()\n",
-    "\n",
-    "#Select only USA participants\n",
-    "usa_filter = starter_olympics_df[(starter_olympics_df[\"Sex\"] == \"F\")]\n",
-    "usa_filter.head()\n",
-    "\n",
-    "#drop duplicates based off of the name\n",
-    "usa_clean = usa_filter.drop_duplicates(subset=['Name']).count()\n",
-    "usa_clean.head()\n",
-    "\n",
-    "#Checking for any Nan values on columns to be used\n",
-    "#usa_clean['NOC'].isnull().values.any()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +226,48 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##With this dataset you can see that there have only been 33,808 women who have participated in the Olympic Games\n",
+    "\n",
+    "#Selecting the columns\n",
+    "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team', 'NOC',\n",
+    "                                'Year', 'Sport', 'Event', 'Medal']]\n",
+    "starter_olympics_df.head()\n",
+    "\n",
+    "#Select only USA participants\n",
+    "usa_filter_f = starter_olympics_df[(starter_olympics_df[\"Sex\"] == \"F\")]\n",
+    "usa_filter.head()\n",
+    "\n",
+    "#drop duplicates based off of the name\n",
+    "usa_clean = usa_filter.drop_duplicates(subset=['Name']).count()\n",
+    "usa_clean.head()\n",
+    "\n",
+    "#Checking for any Nan values on columns to be used\n",
+    "#usa_clean['NOC'].isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name    100979\n",
+       "Sex     100979\n",
+       "Age      94941\n",
+       "Team    100979\n",
+       "NOC     100979\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,21 +293,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'starter_olympic_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-32-184860921b70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstarter_olympic_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Sport\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'starter_olympic_df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sport</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>F</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Speed Skating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>F</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Speed Skating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>F</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>Speed Skating</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>F</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Athletics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>F</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Sailing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262863</th>\n",
+       "      <td>F</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>Archery</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263428</th>\n",
+       "      <td>F</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Handball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265698</th>\n",
+       "      <td>F</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Curling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266759</th>\n",
+       "      <td>F</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Modern Pentathlon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270972</th>\n",
+       "      <td>F</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>Athletics</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1363 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sex   Age              Sport\n",
+       "4        F  21.0      Speed Skating\n",
+       "6        F  25.0      Speed Skating\n",
+       "8        F  27.0      Speed Skating\n",
+       "26       F  18.0          Athletics\n",
+       "32       F  30.0            Sailing\n",
+       "...     ..   ...                ...\n",
+       "262863   F  58.0            Archery\n",
+       "263428   F  38.0           Handball\n",
+       "265698   F  18.0            Curling\n",
+       "266759   F  18.0  Modern Pentathlon\n",
+       "270972   F  47.0          Athletics\n",
+       "\n",
+       "[1363 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "player_data = usa_filter_f[[\"Sex\", \"Age\", \"Sport\"]]\n",
+    "player_data= player_data.drop_duplicates()\n",
+    "player_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
